--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="style.css">
   <script src="script.js"></script>
 </head>
-<body>
+<body style="background-color:red;">
   ...
   <!-- Le reste du contenu -->
   hi voila mon premeir exemple git
