bonjour pour branche master

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   ...
   <!-- Le reste du contenu -->
   hi voila mon premeir exemple git
-  <h3>hello test</h3>
+  <h3>bonjour pour master</h3>
   ...
 </body>
 </html>
